.provarCaches/00D6C0000000xA6UAI/objects/SDOC__SDTemplate__c.object
<CustomObject>
    <fields>
        <fullName>SDOC__MS_Use_Advanced_Properties__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable MS header, footer and paproperty definitions</description>
        <inlineHelpText>Checking this box will enable Advanced MS Properties like Footer/Header Definitions and page properties. You should leave this unchecked for your existing S-Docs templates where you have defined this in the template body.</inlineHelpText>
        <label>MS Use Advanced Properties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Mass_Merge_Allow_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Merge Allow Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Mass_Merge_Clear_Email_Jobs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Merge Clear Jobs after Emailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Mass_Merge_Clear_Jobs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Merge Clear Jobs after Combine All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Mass_Merge_Exclude_Page_Breaks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Merge Exclude Page Breaks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Mass_Merge_Page_Break_Every_N_Docs__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Mass Merge Page Break Every N Docs</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__Mass_Merge_Sort_Field__c</fullName>
        <label>Mass Merge Sort Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Mass_Merge_Summary_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Merge Summary Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Master_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Template</label>
        <referenceTo>SDOC__SDTemplate__c</referenceTo>
        <relationshipLabel>Version History</relationshipLabel>
        <relationshipName>S_Docs_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Num_Splitters__c</fullName>
        <label>Num_Splitters</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__Org_Agnostic_ID__c</fullName>
        <label>Org-Agnostic ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__PDF_Unicode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDF Unicode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Preview_ID__c</fullName>
        <label>Preview ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Related_Lists__c</fullName>
        <label>Related Lists</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Remind_After_Generate__c</fullName>
        <label>Remind After Generate</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__Remind_Before_Expire__c</fullName>
        <label>Remind Before Expire</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__Remove_Attachment_On_Delete__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Remove Attachment On Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Restore_Link__c</fullName>
        <description>Allows you to replace the current version of the template with this version.</description>
        <formula>IF ( NOT(isblank(SDOC__Master_Template__c)) ,
HYPERLINK(&quot;/apex/SDOC__SDRedirect?redirectPage=SDOC__SDRestoreTemplate&amp;restoreId=&quot; + Id + 
&quot;&amp;currentId=&quot; + SDOC__Master_Template__c + 
&quot;&amp;currentName=&quot; + SDOC__Master_Template__r.Name,
IMAGE(&quot;/img/func_icons/util/ileUndo16.gif&quot;,&quot;Restore&quot;),
&apos;_self&apos;),
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Allows you to replace the current version of the template with this version.</inlineHelpText>
        <label>Restore Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__S3_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable Amazon S3 Docs Upload. Check here if you want to allow users to upload this doc to Amazon S3.</inlineHelpText>
        <label>Amazon S3 Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__SD_K__c</fullName>
        <label>SD_K</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SDOC__SSign_Hide_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>S-Sign Hide Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Save_Data__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Save Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Show_Warning_Messages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Warning Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Tags_2__c</fullName>
        <label>Tags 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Tags__c</fullName>
        <label>Tags</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Task_Auto_Create_Default__c</fullName>
        <description>Controls auto-task creation defaults</description>
        <inlineHelpText>Use this field to control if you want a task to be auto-created, required, or if user needs to opt-in to create a task.</inlineHelpText>
        <label>Task Auto Create Default</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checked1</fullName>
                    <label>Checked, user can Uncheck to prevent Task Creation</label>
                </value>
                <value>
                    <fullName>Checked2</fullName>
                    <label>Checked, User cannot uncheck</label>
                </value>
                <value>
                    <fullName>Unchecked</fullName>
                    <label>Unchecked, user can Check to Auto-Create a task</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__Task_Auto_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Auto Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Task_Details_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows User to edit the details of a follow up task when a document is generated</description>
        <inlineHelpText>Check if you want a User to edit the details of the follow up task whenever a document is generated</inlineHelpText>
        <label>Task_Details_Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Task_Due_Add_Business_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Due Add Business Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Task_Due_Add_Days__c</fullName>
        <label>Task Due Add Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__Task_Status__c</fullName>
        <label>Task Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Task_Subject__c</fullName>
        <label>Task Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_CSS_XML__c</fullName>
        <label>Template CSS</label>
        <length>64000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_Format__c</fullName>
        <description>Output format of the generated documents. To support multiple formats, simply clone the template with a different Format field value.</description>
        <inlineHelpText>Output format of the generated documents. To support multiple formats, simply clone the template with a different Format field value.</inlineHelpText>
        <label>Template Format</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>DOCX</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>XLS</fullName>
                </value>
                <value>
                    <fullName>XLSX</fullName>
                </value>
                <value>
                    <fullName>XML</fullName>
                </value>
                <value>
                    <fullName>CSV</fullName>
                </value>
                <value>
                    <fullName>PPT</fullName>
                </value>
                <value>
                    <fullName>PPTX</fullName>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Component (DOCX)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML10__c</fullName>
        <label>TemplateXML10</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML2__c</fullName>
        <label>TemplateXML2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML3__c</fullName>
        <label>TemplateXML3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML_Encode10__c</fullName>
        <label>Template XML Encode10</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML_Encode2__c</fullName>
        <label>Template XML Encode2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Template_XML_Encode3__c</fullName>
        <label>Template XML Encode3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Terms_XML_Encode__c</fullName>
        <label>Terms_XML_Encode</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Terms_XML__c</fullName>
        <description>Terms and Conditions</description>
        <label>Terms_XML</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__TranslationTags__c</fullName>
        <label>TranslationTags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Unicode_Level__c</fullName>
        <label>Unicode Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Strict</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__User_Choice_Definitions__c</fullName>
        <label>User Choice Definitions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Version_History_Keep_Limit__c</fullName>
        <description>Limits the number of versions to keep in the &apos;Version History&apos; related list.</description>
        <inlineHelpText>Limits the number of versions to keep in the &apos;Version History&apos; related list.</inlineHelpText>
        <label>Version History Keep Limit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disable Version History</fullName>
                    <default>true</default>
                    <label>Disable Version History</label>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__Version__c</fullName>
        <description>Use this field to track any internally used version number (or date) for this template. It only used for reference purposes.</description>
        <inlineHelpText>Use this field to track any internally used version number (or date) for this template. It only used for reference purposes.</inlineHelpText>
        <label>Document Version</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__XML_Mass_Merge_Master_Tag__c</fullName>
        <label>XML Mass Merge Master Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SDoc Template</label>
    <listViews>
        <fullName>SDOC__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>SDOC__Format_Icon__c</columns>
        <columns>NAME</columns>
        <columns>SDOC__Base_Object__c</columns>
        <columns>SDOC__Version__c</columns>
        <columns>SDOC__Active__c</columns>
        <columns>SDOC__Default__c</columns>
        <columns>SDOC__Create_Attachment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SDOC__Create_File__c</columns>
        <columns>SDOC__Create_Attachment_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDOC__Master_Template__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>SDOC__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Templates</label>
    </listViews>
    <listViews>
        <fullName>SDOC__All_Inactive_Templates</fullName>
        <columns>SDOC__Format_Icon__c</columns>
        <columns>NAME</columns>
        <columns>SDOC__Base_Object__c</columns>
        <columns>SDOC__Version__c</columns>
        <columns>SDOC__Active__c</columns>
        <columns>SDOC__Default__c</columns>
        <columns>SDOC__Create_Attachment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDOC__Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SDOC__Master_Template__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Inactive Templates</label>
    </listViews>
    <listViews>
        <fullName>SDOC__Archived_Templates</fullName>
        <columns>SDOC__Format_Icon__c</columns>
        <columns>NAME</columns>
        <columns>SDOC__Base_Object__c</columns>
        <columns>SDOC__Version__c</columns>
        <columns>SDOC__Active__c</columns>
        <columns>SDOC__Default__c</columns>
        <columns>SDOC__Create_Attachment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDOC__Master_Template__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Archived Templates</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S-Docs Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>